# nautible-app-examples

./: README.md
.github/workflows/: build-go.yml  build-java.yml  build-node.yml  build-pull-request.yml  build-python.yml
nautible-app-examples-go/: README.md  go.mod  go.sum
nautible-app-examples-go/assets/: ローカル開発イメージ.drawio
nautible-app-examples-go/cmd/examples/: main.go
nautible-app-examples-go/package/examples/: Dockerfile  Dockerfile.local
nautible-app-examples-go/pkg/inbound/: examples_controller.go
nautible-app-examples-go/scripts/: build.sh  skaffold.yaml
nautible-app-examples-java/: README.md  build.sh  pom.xml  skaffold.yaml  ローカル開発イメージ.drawio
nautible-app-examples-node/: .dockerignore  README.md  config.yml  package-lock.json  package.json  skaffold.yaml  tsconfig.json  ローカル開発イメージ.drawio
nautible-app-examples-node/api/: examples.yaml
nautible-app-examples-node/docker/: Dockerfile  Dockerfile.local
nautible-app-examples-node/src/: index.ts  server.ts
nautible-app-examples-python/: .dockerignore  README.md  build.sh  logging_config.conf  requirements.txt  setup.cfg  skaffold.yaml  ローカル開発イメージ.drawio
nautible-app-examples-python/api/: examples.yaml
nautible-app-examples-python/docker/: Dockerfile  Dockerfile.local
nautible-app-examples-python/src/openapi_server/: __init__.py  main.py
nautible-app-examples-python/src/openapi_server/apis/: health_check_service_api.py  rest_examples_service_api.py
nautible-app-examples-python/tests/: test_health_check_service_api.py  test_rest_examples_service_api.py
(+25 files in other folders)
