[metadata]
name = nautible-app-examples-python
version = 1.0.0
license = Apache License
description = nautible examples Service
long_description = file: README.md
keywords = OpenAPI nautible-app-examples API
classifiers =
    Operating System :: OS Independent==
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
setup_requires = setuptools
install_requires = file: requirements.txt
python_requires = >= 3.10.*
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
